c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/for_absent_condition.c
int main(void) {
    for (int i = 400; ; i = i - 100)
        if (i == 100)
            return 0;
}
