c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/continue_not_in_loop.c
int main(void) {
    {
        int a;
        continue;
    }
    return 0;
}